nettimeprovider: Add possibility to set QoS DSCP value

https://bugzilla.gnome.org/show_bug.cgi?id=784737